[gd_scene load_steps=6 format=3 uid="uid://ctrbq4nx72wlm"]

[ext_resource type="Script" path="res://scenes/main/BottomBar.gd" id="1_u518j"]
[ext_resource type="PackedScene" uid="uid://cbqiu8uvna5hn" path="res://views/BottomBar/bottom_bar_button.tscn" id="2_tx04d"]
[ext_resource type="Texture2D" uid="uid://d2uasdvc4ai4u" path="res://sprites/icons/quantum.svg" id="3_7tdq5"]
[ext_resource type="Texture2D" uid="uid://b14tppiydctbk" path="res://sprites/icons/mine.svg" id="4_mfrxi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ujlr"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="BottomBar" type="PanelContainer"]
custom_minimum_size = Vector2(0, 150)
theme_override_styles/panel = SubResource("StyleBoxFlat_3ujlr")
script = ExtResource("1_u518j")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="BottomBarButton" parent="HBoxContainer" instance=ExtResource("2_tx04d")]
layout_mode = 2
ref_icon = ExtResource("3_7tdq5")
ref_name = "RESEARCH"

[node name="BottomBarButton2" parent="HBoxContainer" instance=ExtResource("2_tx04d")]
layout_mode = 2
ref_icon = ExtResource("4_mfrxi")

[node name="BottomBarButton3" parent="HBoxContainer" instance=ExtResource("2_tx04d")]
layout_mode = 2
ref_name = "SHOP"

[connection signal="pressed" from="HBoxContainer/BottomBarButton" to="." method="_on_research_button_pressed"]
[connection signal="pressed" from="HBoxContainer/BottomBarButton2" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="HBoxContainer/BottomBarButton3" to="." method="_on_shop_button_pressed"]
